--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   image_picker: ^1.1.2
   permission_handler: ^11.3.1
   http: ^1.2.2
+  flutter_screenutil: ^5.5.0
 
 dev_dependencies:
   flutter_test:
