Update build files to support latest Android Studio version

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,12 @@
 name: NutriWise
-description: "A new Flutter project."
+description: "Sustainable food product discovery app built with Flutter."
+
 publish_to: 'none'
 
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.2
+  sdk: ^3.7.2
 
 dependencies:
   flutter:
@@ -16,7 +17,7 @@ dependencies:
   firebase_auth: ^5.3.3
   cloud_firestore: ^5.5.0
   image_picker: ^1.1.2
-  permission_handler: ^11.3.1
+  permission_handler: ^12.0.0+1
   http: ^1.2.2
   flutter_screenutil: ^5.5.0
 
@@ -71,3 +72,4 @@ flutter:
         - asset: assets/fonts/Inter-Regular.ttf
         - asset: assets/fonts/Inter-SemiBold.ttf
           weight: 600
+
