--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "recommendationapp" "\0"
+            VALUE "CompanyName", "NutriWise.com" "\0"
+            VALUE "FileDescription", "nutriwise" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "recommendationapp" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "recommendationapp.exe" "\0"
-            VALUE "ProductName", "recommendationapp" "\0"
+            VALUE "InternalName", "nutriwise" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2025 NutriWise.com. All rights reserved." "\0"
+            VALUE "OriginalFilename", "nutriwise.exe" "\0"
+            VALUE "ProductName", "nutriwise" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
